src/tests/Loader/classloader/generics/Instantiation/Negative/abstract09.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <OutputType>Exe</OutputType>
    <CLRTestPriority>1</CLRTestPriority>
    <CrossGenTest>false</CrossGenTest>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="abstract09.il" />
  </ItemGroup>
</Project>
